# GCovAPI

./: CMakeLists.txt  README.md
include/: gcov_api.h
src/: gcov_app_api.c  gcov_kernel_api.c
